wrap rest of page after aside in a main content div offset to the left using margin. Aside no longer overlapping main content

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body,
 html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -14,10 +14,11 @@ body {
 }
 
 aside {
-  float: left;
-  /* position: fixed; */
-  overflow-y: scroll;
-  z-index: 1001;
+  /* float: left; */
+  width: 25%;
+  /* position: relative; */
+  /* overflow-y: scroll; */
+  /* z-index: 1001; */
   background: #f2f3f7;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
@@ -33,6 +34,20 @@ aside .position {
   margin-bottom: 2em;
   font-size: 12px;
   text-transform: uppercase;
+}
+
+.main-content {
+  margin-left: 25%;
+  padding: 0 15px;
+}
+
+#about {
+  width: 80%;
+  height: 100vh;
+}
+
+#portfolio {
+  height: 100vh;
 }
 
 /* this also hides the details text */
@@ -55,4 +70,10 @@ aside .position {
   transition: opacity 0.4s ease, transform 0.3s ease;
   opacity: 0;
   font-family: "Ysabeau", sans-serif;
+}
+
+@media screen and (max-width: 990px) {
+  aside {
+    float: none;
+  }
 }
